# brawlback-asm

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CreateSD-rapito.bat  CreateSD.bat  LICENSE  Loader.asm  Makefile  README.md  bbk.py  build-macos.sh  sdcard-macos.sh  test.ld  toolchain.cmake
.github/workflow/: brawlback.yaml
.github/workflows/: brawlback.yml  cmake.yml
Brawlback/: .gitignore  README.md  build.bat
Brawlback-Online/: EXTRA.lst  Makefile
Brawlback-Online/include/: Draw.h  EXI_hooks.h  Research_Hooks.h  Rollback_Hooks.h  Text_Printer.h  exi_packet.h  mem_exp_hooks.h  test_hooks.h  utils.h
Brawlback-Online/source/: BrawlbackHeadersImpl.cpp  Draw.cpp  EXI_hooks.cpp  Rollback_Hooks.cpp  Text_Printer.cpp  exi_packet.cpp  mem_exp_hooks.cpp  rel.cpp  utils.cpp
Brawlback/CMake/: DebugSettings.cmake  Functions.cmake  Paths.cmake
Brawlback/Codes/: CMakeLists.txt  cmake_install.cmake
Brawlback/Globals/: CMakeLists.txt  Debug.cpp  Memory.h  Setup.cpp  Setup.h  stdarg.h  stddef.h
Brawlback/SDCard/: boot.elf
Brawlback/scripts/: addCodesToSD.py  moveOutputToSDFolder.py
BuildSystem/: BrawlFuncMap.map  LoadFiles.asm  settings.json
BuildSystem/src/: BinUtils.py  Build.py  Common.py  Compiler.py  File.py  Library.py  LibraryDirectory.py  Section.py  Segment.py  SegmentManager.py  SetEnvironment.py  Settings.py  Symbol.py
CMake/: CompilerSettings.cmake  DebugSettings.cmake  Functions.cmake  PPCToolchain.cmake  Paths.cmake
Codes/: CMakeLists.txt
Codes/Brawlback/: Brawlback.cpp  Brawlback.h  CMakeLists.htm  CMakeLists.txt  EXIPacket.cpp  EXIPacket.h  GmGlobalModeMelee.cpp  GmGlobalModeMelee.h  Hacks.cpp  NetMenu.cpp  NetMenu.h  Netplay.cpp  Netplay.h
Codes/CSSControls/: C++Stuff.h  CMakeLists.txt  CSSCustomControls.cpp  CSSCustomControls.h  CSSTagMenuState.h  ControllerManager.cpp  ControllerManager.h  CustomControlOffsets.cpp  CustomControlOffsets.h  General.cpp
Codes/CameraScale/: CMakeLists.txt  IncrementScale.cpp
Codes/CrowdControl/: CMakeLists.txt  CrowdControl.cpp  CrowdControl.h  EXIPacket.cpp  EXIPacket.h  EffectItemHandler.cpp  EffectItemHandler.h  PPlusCrowdControl.cs  README.md
Codes/CustomAiFunctions/: CMakeLists.txt  ItemStuff.cpp  PatternManager.h
Codes/DrawARectangle/: CMakeLists.txt  menu.cpp  menu.h
Codes/ManualMessage/: CMakeLists.txt  MessageMaker.cpp
Codes/PrintGetParams/: CMakeLists.txt  print.cpp
Codes/PrintTest/: CMakeLists.txt  print.cpp
Codes/Random1To1Alts/: CMakeLists.txt  Random1To1Alts.h  StageInfo.cpp  StageInfo.h
Codes/ReplayFix/: AsyncFileIO.cpp  AsyncFileIO.h  CMakeLists.txt  CircularBuffer.h  Play.cpp  Play.h  PlaybackFileSyncer.cpp  PlaybackFileSyncer.h  Record.cpp  Record.h  ReplayEvent.h  ReplayFix.cpp  ReplayPlayer.h  ReplayRecorder.cpp  ReplayRecorder.h
Codes/SlippiBrawl/: CMakeLists.txt
Codes/SlippiReplays/: CMakeLists.txt  EXIPacket.cpp  EXIPacket.h  Playback.cpp  Playback.h  PlaybackMenu.cpp  PlaybackMenu.h  Record.cpp  Record.h  Replay.cpp  Replay.h  Replays.cpp  Replays.h  etl_profile.h  menu.h
Codes/SlippiReplays/Utilities/: Utility.cpp  Utility.h
Codes/SlippiTest/: CMakeLists.txt
Codes/SuperTraining/: CMakeLists.txt  FudgeMenu.h  MovementTracker.h  PatternManager.h  hitboxHeatmap.cpp  hitboxHeatmap.h  main.cpp  menu.h
ConsoleMirroring-Client/: EXTRA.lst  Makefile
ConsoleMirroring-Client/include/: ConsoleMirroring_Hooks.h  Draw.h  Drawable.h  TextPrinter.h  mem_exp_hooks.h
ConsoleMirroring-Server/: Makefile  rel.lcf
GCTRM/: GCTRealMateLinux  GCTRealMateMACOS  Project+BOOST.txt  Project+RSBE01.txt  RSBE01.txt  vBrawlBOOST.txt  vBrawlRSBE01.txt
GCTRM/Project+/: BOOST.txt  (+3 more)
Globals/: Assembly.cpp  Assembly.h  CMakeLists.txt  Debug.h  Memory.cpp  Memory.h  Setup.cpp  Setup.h  SystemFunctions.cpp  stddef.h  stdtypes.h
Launchers/: Project+ Launcher.elf  vBrawl Launcher.elf
Libraries/: CMakeLists.txt
MakeSD/: Config.ini  SAMPLE-Config.ini  main.bat  mount.bat  nonsecureSendKeys.bat  settings.bat  unmount.bat
MakeSD2/: Config.ini
Syriinge/: Makefile
lib/: base_rules
scripts/: addCodesToSD - Shortcut.lnk  addCodesToSD.ahk  addCodesToSD.py
tools/: .gitignore  elf2rel  elf2rel.darwin.arm64  requirements.txt
(+541 files in other folders)
